--- a/nextpage/css/style.css
+++ b/nextpage/css/style.css
@@ -1,4 +1,19 @@
 @import url(../../css/sanitize.css);
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+header {
+    background-color: #422814;
+    padding         : 10px;
+    color           : #fff;
+}
+
+header h1 {
+    font-family: 'Montserrat', sans-serif;
+    margin     :   0;
+    font-size  : 24px;
+    font-weight: normal;
+    text-align : center;
+}
 
 body {
     background-color: #f0f0f0;
@@ -8,20 +23,109 @@ body {
 }
 
 .container {
-    width     : 800px;
+    max-width : 800px;
     margin    :   0 auto;
     box-shadow:   0 0 10px rgba(0, 0, 0, .3);
 }
 
-header {
-    background-color: #422814;
-    padding         : 10px;
-    color           : #fff;
+.description img {
+    float : left;
+    margin: 0 10px 10px 0;
+    transition: opacity 1s ease 0s;
 }
 
-header h1 {
-    margin     :   0;
-    font-size  : 24px;
-    font-weight: normal;
-    text-align : center;
+.infomation h1 {
+    font-size: 18px;
+    margin   : 0 10px 10px 0;
+    float    : left;
+}
+
+.infomation .type {
+    display         : inline;
+    background-color: #E35A4D;
+    padding         : 3px 5px;
+    font-size       : 80%;
+    color           :#FFF;
+}
+
+.description {
+    clear: left;
+}
+
+.description img:hover {
+    opacity: .5;    /* 不透明度 */
+}
+
+.content {
+    background-clip: #fff;
+    padding        : 20px;
+}
+
+.songs {
+    margin:0 0 20px;
+}
+
+.songs h2 {
+    clear           : left;
+    font-size       : 100%;
+    font-weight     : normal;
+    margin          : 0;
+    background-color: #E6E4DD;
+    padding         : 5px 10px;
+}
+
+.songs ol {
+    padding   : 0;
+    margin    : 0;
+    list-style: decimal inside; /* スタイルを算用数字に */
+}
+
+.songs li {
+    border-bottom: 1px solid #CCC; /* 要素の下に線を引く */
+    width        : 50%;
+    float        : left; /* 左に回り込み */
+    padding      : 5px 10px;
+}
+
+.clearfix:after {
+    content: " ";
+    display: table;
+    clear  : both;
+}
+
+a {
+    color: #666;
+}
+
+footer {
+    text-align: center;
+    font-size : 80%;
+    background-color: #CCC;
+}
+
+@media only screen and (max-width:600px) { /* 600px以下の画面 */
+    .description img{
+        float  : none;      /* 回り込み解除   */
+        display: block;     /* 表示をブロック */
+        margin :0 auto;     /* 中央揃え      */
+    }
+
+    header {
+        padding: 5px;
+    }
+
+    header h1 {
+        font-size: 12px;
+    }
+
+    .songs li {
+        float: none;
+        width: inherit;
+    }
+}
+
+@media print {  /* 印刷時の処理 */
+    .header {
+        display: none;
+    }
 }
